--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://xmlns.jcp.org/jsf/html"
->
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:jsf="http://xmlns.jcp.org/jsf">
 <h:head>
-	<title>Demo</title>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
+    <title>Demo</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"/>
 </h:head>
 <h:body styleClass="container">
-	<h4>This is a demo page</h4>
-	<div class="card">
-		<h:link outcome="list.xhtml">Click me a few times quickly</h:link>
-	</div>
+    <h4>This is a demo page</h4>
+    <div class="card">
+        <div class="card-body">
+            <h:form>
+                <button id="executeButton" jsf:action="#{backingBean.executeAsync()}" class="btn btn-primary">Execute Async</button>
+            </h:form>
+        </div>
+    </div>
+    <div class="pageEnd"/>
 </h:body>
 </html>
